# youtube_prezo_transcript

./: .gitignore  INSTALL.md  README.md  UV_INSTALL.md  batch_processor.py  config.py  debug_transcript.py  document_generator.py  env_example.txt  main.py  pyproject.toml  requirements.txt  sample_urls.txt  scene_detector.py  setup_uv.py  test_batch_size.py  test_batching.py  test_installation.py  test_large_context.py  test_llm_integration.py  test_transcript_extraction.py  transcript_enhancer.py  transcript_parser.py  video_processor.py
